# graphical-movie-application

./: README.md
backend/: .gitignore  __init__.py  app.py  config.py  data_loader.py  dependencies.py  main.py  pyproject.toml  requirements.txt
backend/routers/: movie_data.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: BarChart.js
