[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hampus Tuisku <ht222mi@student.lnu.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pandas = "^2.2.2"
kaggle = "^1.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
