[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hampus Tuisku <ht222mi@student.lnu.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
kaggle = "^1.6.12"
flask-cors = "^4.0.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
